Add websocket client and connection manager.
- Changed viscosity abstract to be closable.
- Moved GSON into GSONUtils.
- Seperated netty client and server.
- Added bungee plugin.

--- a/all/build.gradle
+++ b/all/build.gradle
@@ -21,6 +21,7 @@ java {
 dependencies {
     compile project(':api')
     compile project(':bukkit')
+    compile project(':bungee')
 }
 
 shadowJar {
