--- a/.github/workflows/gradle_build.yml
+++ b/.github/workflows/gradle_build.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Get BungeeCord
+        run: curl -o ./dependencies/BungeeCord.jar https://ci.md-5.net/job/bungeecord/lastSuccessfulBuild/artifact/bootstrap/target/BungeeCord.jar
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build shadowJar
