--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -1,7 +1,7 @@
 name: Gradle Publish (GH Packages)
 on:
   release:
-    types: [created]
+    types: [ created ]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Get BungeeCord
+        run: curl -o ./dependencies/BungeeCord.jar https://ci.md-5.net/job/bungeecord/lastSuccessfulBuild/artifact/bootstrap/target/BungeeCord.jar
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build package & shadowJar
